# agentos-harness

./: .gitignore  AGENTIC-OS-DASHBOARD-SPEC.md  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  UPDATE.txt  _fetch_source.py  _rename_package.py  pyproject.toml
dashboard/: README.md  ecosystem.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
dashboard/__tests__/parse/: brain-dump-parser.test.ts
dashboard/__tests__/schemas/: schemas.test.ts
dashboard/scripts/daemon/: index.js  index.ts
src/agentos_harness/: __init__.py  analyzer.py  audit.py  cli.py  config.py  config_templates.py  dashboard_cli.py  dashboard_data.py  dashboard_server.py  discipline.py  existing_harness.py  generator.py  linter.py  models.py  profile_registry.py  project_detector.py  rollback.py  setup_modules.py  tool_check.py  validate.py  wiki.py  wiki_validation.py  wiki_validator.py  workspace_hygiene.py
src/agentos_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analyzer.py  test_audit.py  test_cli.py  test_commit_gate.py  test_config_templates.py  test_dashboard_checks.py  test_dashboard_data.py  test_dashboard_server.py  test_dashboard_static.py  test_defensive_hooks.py  test_discipline.py  test_discipline_hooks.py  test_end_to_end.py  test_error_tracker.py  test_existing_harness.py  test_fixtures.py  test_generate_apply.py  test_generated_hooks.py  test_generator_manifest.py  test_handoff_reminder.py  test_knowledge_promotion_hook.py  test_learning_hooks.py  test_linter.py  test_notebook_conformance_hook.py  test_profile_registry.py  test_project_detector.py  test_security_privacy.py  test_session_context.py  test_setup_modules.py  test_skill_guard.py  test_skill_index.py  test_tool_check.py  test_validate.py  test_wiki.py  test_wiki_hooks.py  test_wiki_karpathy_features.py  test_wiki_validation.py  test_wiki_validator.py  test_workflow_completion_sweep.py  test_workspace_hygiene.py
(+110 files in other folders)
