[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos-harness"
version = "0.7.0"
description = "Local developer harness (agentos-harness v2): analyzer, generator, and agentic-OS dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Spokeo Data Science", email = "data-science@spokeo.com" }
]
dependencies = []

[project.urls]
Repository = "https://github.com/spokeo/atlas"

[project.optional-dependencies]
dev = ["pytest>=8"]
visual = ["playwright>=1.44"]

[project.scripts]
harness = "agentos_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
distributable_harness = [
  "static/*.html",
  "static/*.css",
  "static/*.js",
  "hooks/*.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
norecursedirs = ["tests/fixtures"]
